# gst-plugins-base

./: configure.ac
ext/alsa/: Makefile.am  gstalsaplugin.c  gstalsasink.c
ext/cdparanoia/: Makefile.am  gstcdparanoiasrc.c
ext/gio/: Makefile.am  gstgio.c
ext/gnomevfs/: Makefile.am  gstgnomevfs.c
ext/libvisual/: Makefile.am  visual.c
ext/ogg/: Makefile.am  gstogg.c  gstoggdemux.c
ext/pango/: Makefile.am  gsttextoverlay.c  gsttextoverlay.h
ext/theora/: Makefile.am  gsttheora.c
ext/vorbis/: Makefile.am  gstivorbisdec.c  gstvorbis.c  gstvorbisdec.c
gst/adder/: Makefile.am  gstadder.c
gst/app/: Makefile.am  gstapp.c
gst/audioconvert/: Makefile.am  plugin.c
gst/audiorate/: Makefile.am  gstaudiorate.c
gst/audioresample/: Makefile.am  gstaudioresample.c
gst/audiotestsrc/: Makefile.am  gstaudiotestsrc.c
gst/encoding/: Makefile.am  gstencodebin.c
gst/ffmpegcolorspace/: Makefile.am  avcodec.h  dsputil.c  dsputil.h  gstffmpegcolorspace.c  imgconvert.c  utils.c
gst/gdp/: Makefile.am  gstgdp.c
gst/playback/: Makefile.am  gstdecodebin.c  gstplayback.c  gstplayback.h  gstplaybin2.c  gstplaysink.c  gstplaysinkconvertbin.c  gstrawcaps.h  gstsubtitleoverlay.c  gsturidecodebin.c
gst/subparse/: Makefile.am  gstsubparse.c  gstsubparse.h  webvttparse.c  webvttparse.h
gst/tcp/: Makefile.am  gsttcpplugin.c
gst/typefind/: Makefile.am  gsttypefindfunctions.c
gst/videorate/: Makefile.am  gstvideorate.c
gst/videoscale/: Makefile.am  gstvideoscale.c  gstvideoscaleorc-dist.c  gstvideoscaleorc.orc  vs_fill_borders.c  vs_image.c  vs_image.h  vs_scanline.c
(+30 files in other folders)
